# LLM-Powered-Doctor-Recommendation

./: .env.example  .gitignore  Readme.md  data_store_and_test.py  pyproject.toml
api/: main.py
app/: app.py
model/: __init__.py  user_query.py
scripts/: __init__.py  prepare_vector_data.py
